syntax = "proto2";

package ko.bootstrap.types;

option go_package = "proto";

message Fixture {
	required Type type = 1;
}

message Type {
	optional Empty empty = 1;
	optional Bool bool = 11;
	optional String string = 12;
	optional Integer integer = 13;
	optional Floating floating = 14;
	optional Series series = 21;
	optional Structure structure = 22;
	optional Union union = 31;
	optional Variety variety = 32;
	optional Optional optional = 41;
}

message Empty {}

message Bool {}

message String {}

message Integer {}

message Floating {}

message Series {
	repeated Type elemType = 1;
}

message Structure {
	repeated Field fields = 1;
}

message Field {
	required string name = 1;
	required Type type = 2;
}

message Union {
	repeated Type varieties = 1;
}

message Variety {
	required Transform transform = 1;
	repeated Field fields = 2;
}

message Transform {
	optional Operator operator = 1;
	optional Func func = 2;
}

message Operator {
	required string pkg = 1;
	required string name = 2;
}

message Func {
	required string pkg = 1;
	required string name = 2;
}

message Optional {
	required Type elemType = 1;
}
